--- a/src/main/resources/templates/user/myPage.html
+++ b/src/main/resources/templates/user/myPage.html
@@ -127,7 +127,7 @@
         <button class="big-button" onclick="location.href = '/my-page/edit'">프로필 수정</button>
     </div>
 
-    <div class="row">
+    <div class="row" onclick="location.href = '/items/my-items'">
         <img src="/img/page.png"/>
         <span>판매내역</span>
     </div>
