Feat: 날짜 계산 프론트로 이전

--- a/src/main/resources/templates/comments/view.html
+++ b/src/main/resources/templates/comments/view.html
@@ -162,7 +162,7 @@
                 <div class="item_text">
                     <div class="comment-info">
                         <span th:text="${comment.commenter.nickname}"></span>
-                        <span th:text="${comment.createdAt}"></span>
+                        <span class="time" th:text="${comment.createdAt}"></span>
                     </div>
                     <div th:text="${comment.text}" class="comment-box">내용무</div>
                 </div>
@@ -186,4 +186,39 @@
         let itemId = [[${item.id}]]
         location.href = "/comments/writing/" + itemId +"?commentId=" + commentId;
     }
+    const changeTimeType = () => {
+        let size = document.getElementsByClassName("time").length;
+        for (let i = 0 ; i < size ; i++){
+            let timeStr = timeForToday(document.getElementsByClassName("time")[i].textContent);
+            document.getElementsByClassName("time")[i].textContent = timeStr;
+        }
+    }
+    const timeForToday = (value) => {
+        const today = new Date();
+        const timeValue = new Date(value);
+
+        const betweenTime = Math.floor((today.getTime() - timeValue.getTime()) / 1000 / 60);
+        if (betweenTime < 1) return '방금전';
+        if (betweenTime < 60) {
+            return `${betweenTime}분전`;
+        }
+
+        const betweenTimeHour = Math.floor(betweenTime / 60);
+        if (betweenTimeHour < 24) {
+            return `${betweenTimeHour}시간전`;
+        }
+
+        const betweenTimeDay = Math.floor(betweenTime / 60 / 24);
+        if (betweenTimeDay < 365) {
+            return `${betweenTimeDay}일전`;
+        }
+        const betweenTimeMonth = Math.floor(betweenTime / 60 / 24 / 12);
+        if (betweenTimeMonth < 12) {
+            return `${betweenTimeMonth}개월전`;
+        }
+
+        return `${Math.floor(betweenTimeDay / 365)}년전`;
+    }
+    changeTimeType();
+
 </script>
