--- a/src/main/resources/templates/items/list.html
+++ b/src/main/resources/templates/items/list.html
@@ -153,9 +153,9 @@
                         <div>[[${item.price}]]원</div>
                     </div>
                     <div class="item_preference">
-                        <span>
+                        <span th:if="${item.comments.size() != 0}">
                             <img src="/img/chat.png" />
-                            n
+                            [[${item.comments.size()}]]
                         </span>
                         <span>
                             <img src="/img/heart.png" />
