--- a/src/main/resources/templates/items/item-view.html
+++ b/src/main/resources/templates/items/item-view.html
@@ -282,7 +282,10 @@
     <nav class="local-nav">
         <div class="local-nav-links">
             <div class="local-nav-items">
-                <button>
+                <button th:if="${isInterested}" onclick="deleteInterest();">
+                    <img src="/img/heart_red.png"/>
+                </button>
+                <button th:if="${isInterested == null || !isInterested}" onclick="addInterest();">
                     <img src="/img/heart.png"/>
                 </button>
             </div>
@@ -309,7 +312,7 @@
 
 </div>
 </body>
-<script>
+<script th:inline="javascript">
     const navGlobalFixed = (yOffset) => {
         if (yOffset > 0) {
             document.body.classList.add("local-nav-sticky");
@@ -373,5 +376,27 @@
         for (let i = 0 ; i < modals.length ; i++){
             document.getElementsByClassName('modal')[i].classList.add("invisible");
         }
+    }
+
+    const addInterest = () => {
+        let xhr = new XMLHttpRequest();
+        let formData = new FormData();
+
+        formData.append('itemId', [[${item.id}]]);
+        formData.append('userId', [[${user.id}]]);
+        alert("itemid is " + [[${item.id}]])
+        xhr.onload = function() {
+            if (xhr.status === 200 || xhr.status === 201) {
+                location.reload();
+            } else {
+                alert("다시 시도해주세요.");
+            }
+        };
+        xhr.open('POST', '/api/interests');
+        xhr.send(formData); // 폼 데이터 객체 전송
+    }
+
+    const deleteInterest = () => {
+
     }
 </script>
