Feat: 중고거래 리스트에 관심목록 갯수 추가
기타 수정, 리스트 20개 제한

--- a/src/main/resources/templates/items/list.html
+++ b/src/main/resources/templates/items/list.html
@@ -157,9 +157,9 @@
                             <img src="/img/chat.png" />
                             [[${item.comments.size()}]]
                         </span>
-                        <span>
+                        <span th:if="${item.interests.size() != 0}">
                             <img src="/img/heart.png" />
-                            n
+                            [[${item.interests.size()}]]
                         </span>
                     </div>
                 </div>
