--- a/src/main/resources/templates/items/list.html
+++ b/src/main/resources/templates/items/list.html
@@ -124,6 +124,13 @@
             bottom: 0;
             border-bottom: 0.001px solid #e5e8eb;
         }
+        .sold {
+            padding: 10px;
+            background-color: black;
+            color: white;
+            padding-left: 20px;
+            border-radius: 10px;
+        }
     </style>
 </head>
 <body>
@@ -150,7 +157,12 @@
                     <div class="item_text">
                         <div th:text="${item.title}"></div>
                         <div th:text="${item.place}">Place</div>
-                        <div>[[${item.price}]]원</div>
+                        <div>
+                            <span class="sold" th:if="${item.status.equals('SOLD')}">
+                                거래완료
+                            </span>
+                            [[${item.price}]]원
+                        </div>
                     </div>
                     <div class="item_preference">
                         <span th:if="${item.comments.size() != 0}">
