Feat: 게시물 상태 enum 한글화

--- a/src/main/resources/templates/items/item-view.html
+++ b/src/main/resources/templates/items/item-view.html
@@ -231,7 +231,7 @@
             <option th:each="status : ${statusList}"
                     th:selected="${status.equals(item.status)}"
                     th:value="${status}"
-                    th:text="${status}"
+                    th:text="${status.krName}"
                     name="status">
             </option>
         </select>
