Feat: 게시물 카테고리 한글화

--- a/src/main/resources/templates/items/item-edit.html
+++ b/src/main/resources/templates/items/item-edit.html
@@ -124,7 +124,7 @@
                         onchange="updateCategory(this);">
                     <option th:each="category : ${categories}"
                             th:value="${category}"
-                            th:text="${category}"
+                            th:text="${category.krName}"
                             >
 
                     </option>
