Fix: 거래완료 카드표시 빠진 부분 수정

--- a/src/main/resources/templates/items/user-items.html
+++ b/src/main/resources/templates/items/user-items.html
@@ -245,7 +245,7 @@
                         <div th:text="${item.title}"></div>
                         <div th:text="${item.place}">Place</div>
                         <div>
-                            <span class="sold" th:if="${item.status.equals('SOLD')}">
+                            <span class="sold">
                                 거래완료
                             </span>
                             [[${item.price}]]원
