--- a/src/main/resources/templates/items/my-items.html
+++ b/src/main/resources/templates/items/my-items.html
@@ -172,6 +172,13 @@
             align-items: center;
             border-top: solid grey;
         }
+        .sold {
+            padding: 10px;
+            background-color: black;
+            color: white;
+            padding-left: 20px;
+            border-radius: 10px;
+        }
     </style>
 </head>
 <body>
@@ -237,7 +244,12 @@
                         <div class="item_text">
                             <div th:text="${item.title}"></div>
                             <div th:text="${item.place}">Place</div>
-                            <div>[[${item.price}]]원</div>
+                            <div>
+                                <span class="sold">
+                                    거래완료
+                                </span>
+                                [[${item.price}]]원
+                            </div>
                         </div>
                         <div class="item_preference">
                             <span>
