--- a/src/main/resources/templates/items/list.html
+++ b/src/main/resources/templates/items/list.html
@@ -142,7 +142,7 @@
                 <button>
                     <img src="img/search.png"/>
                 </button>
-                <button>
+                <button onclick="location.href='/items/categories'">
                     <img src="img/menu.png" />
                 </button>
             </span>
