Feat: 카테고리 기준 아이템 검색

--- a/src/main/resources/templates/items/categories.html
+++ b/src/main/resources/templates/items/categories.html
@@ -64,7 +64,8 @@
         </div>
         <div class="category-box">
             <span class="category" th:each="category : ${categories}"
-                th:text="${category.krName}">
+                th:text="${category.krName}"
+                  th:onclick="'location.href=\'' + '/items/search/?category=' + @{${category.name()}} + '\''">
                 <!--th:onclick="'location.href=\'' + '/items/' + @{${item.id}} + '\''">-->
             </span>
         </div>
