--- a/src/main/resources/templates/items/item-view.html
+++ b/src/main/resources/templates/items/item-view.html
@@ -66,9 +66,9 @@
             width: 100%;
         }
         .img_container {
-            width: 100%;
+            min-width: 100%;
+            height: 100vw;
             display: flex;
-            align-items: center;
             overflow: scroll;
             -ms-overflow-style: none; /* IE and Edge */
         }
@@ -76,12 +76,17 @@
             display: none; /* Chrome, Safari, Opera*/
         }
         .thumbnail {
-            position: relative;
-            padding-top: 100%; /* 1:1 ratio */
-            overflow: hidden;
+            min-width: 100vw;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-content: center;
+            /*position: relative;
+            padding-top: 100%; !* 1:1 ratio *!
+            overflow: hidden;*/
         }
         .thumbnail > img {
-            position: absolute;
+            /*position: absolute;*/
             /*top: 0; left: 0; right: 0; bottom: 0;*/
             max-width: 100%;
             height: auto;
