--- a/src/main/resources/templates/items/my-items.html
+++ b/src/main/resources/templates/items/my-items.html
@@ -209,14 +209,14 @@
                             <div>[[${item.price}]]원</div>
                         </div>
                         <div class="item_preference">
-                            <span>
-                                <img src="/img/chat.png" />
-                                n
-                            </span>
-                            <span>
-                                <img src="/img/heart.png" />
-                                n
-                            </span>
+                            <span th:if="${item.comments.size() != 0}">
+                            <img src="/img/chat.png" />
+                            [[${item.comments.size()}]]
+                        </span>
+                            <span th:if="${item.interests.size() != 0}">
+                            <img src="/img/heart.png" />
+                            [[${item.interests.size()}]]
+                        </span>
                         </div>
                     </div>
                 </div>
@@ -252,13 +252,13 @@
                             </div>
                         </div>
                         <div class="item_preference">
-                            <span>
+                            <span th:if="${item.comments.size() != 0}">
                                 <img src="/img/chat.png" />
-                                n
+                                [[${item.comments.size()}]]
                             </span>
-                            <span>
+                            <span th:if="${item.interests.size() != 0}">
                                 <img src="/img/heart.png" />
-                                n
+                                [[${item.interests.size()}]]
                             </span>
                         </div>
                     </div>
