--- a/src/main/resources/templates/items/search-result.html
+++ b/src/main/resources/templates/items/search-result.html
@@ -122,14 +122,14 @@
                             </div>
                         </div>
                         <div class="item_preference">
-                            <span>
+                            <span th:if="${item.comments.size() != 0}">
                                 <img src="/img/chat.png" />
-                                n
+                                [[${item.comments.size()}]]
                             </span>
-                            <span>
+                            <span th:if="${item.interests.size() != 0}">
                                 <img src="/img/heart.png" />
-                                n
-                            </span>
+                                [[${item.interests.size()}]]
+                        </span>
                         </div>
                     </div>
                 </div>
