--- a/src/main/resources/templates/items/user-items.html
+++ b/src/main/resources/templates/items/user-items.html
@@ -193,13 +193,13 @@
                         </div>
                     </div>
                     <div class="item_preference">
-                        <span>
+                        <span th:if="${item.comments.size() != 0}">
                             <img src="/img/chat.png" />
-                            n
+                            [[${item.comments.size()}]]
                         </span>
-                        <span>
+                        <span th:if="${item.interests.size() != 0}">
                             <img src="/img/heart.png" />
-                            n
+                            [[${item.interests.size()}]]
                         </span>
                     </div>
                 </div>
@@ -220,13 +220,13 @@
                         <div>[[${item.price}]]원</div>
                     </div>
                     <div class="item_preference">
-                        <span>
+                        <span th:if="${item.comments.size() != 0}">
                             <img src="/img/chat.png" />
-                            n
+                            [[${item.comments.size()}]]
                         </span>
-                        <span>
+                        <span th:if="${item.interests.size() != 0}">
                             <img src="/img/heart.png" />
-                            n
+                            [[${item.interests.size()}]]
                         </span>
                     </div>
                 </div>
@@ -252,13 +252,13 @@
                         </div>
                     </div>
                     <div class="item_preference">
-                        <span>
+                        <span th:if="${item.comments.size() != 0}">
                             <img src="/img/chat.png" />
-                            n
+                            [[${item.comments.size()}]]
                         </span>
-                        <span>
+                        <span th:if="${item.interests.size() != 0}">
                             <img src="/img/heart.png" />
-                            n
+                            [[${item.interests.size()}]]
                         </span>
                     </div>
                 </div>
